<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movies</string>
    <string name="json_main_errorloading">"An error occurred while loading !!!"</string>
    <string name="imageview_movieitem_description">Poster film</string>
    <string name="textview_main_sortpopularity">By popularity</string>
    <string name="textview_main_sortreating">By rating</string>
    <string name="errormessage_mainviewmodel_getmoviebyid">An error occurred while loading the image</string>
    <string name="imageview_detail_descriptionposter">Poster film</string>
    <string name="textview_detail_texttitle">Name:</string>
    <string name="textview_detail_textoriginaltitle">Original name:</string>
    <string name="textview_detail_textrating">Rating:</string>
    <string name="textview_detail_textdate">Date of release:</string>
    <string name="textview_detail_textdescription">Description:</string>
    <string name="toast_detail_addfavourite">Added to favorites</string>
    <string name="toast_detail_deletefavourite">Removed from favorites</string>
    <string name="item_menu_root">Home</string>
    <string name="item_menu_favourite">Favorites</string>
    <string name="imageview_trailer_play">Launch Trailer</string>
    <string name="imageview_detail_startdescription">Add to favorites button</string>
</resources>