<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/verticalmargin_detail_textdescription"
        android:layout_marginHorizontal="@dimen/horizontalmargin_detail_textdescription"
        android:textColor="@color/violet"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/textview_detail_texttitle" />

    <TextView
        android:id="@+id/textview_detail_texttitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/violet_main"
        android:layout_marginVertical="@dimen/verticalmargin_detail_textdescription"
        android:layout_marginHorizontal="@dimen/horizontalmargin_detail_textdescription"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline_center" />

    <View
        android:id="@+id/view_movieinfo_linetitle"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_detail_texttitle"
        android:background="@color/violet_light"
        android:layout_marginHorizontal="9dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textview_detail_label"
        android:text="@string/textview_detail_textoriginaltitle"
        app:layout_constraintTop_toBottomOf="@id/view_movieinfo_linetitle"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textview_detail_textoriginaltitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/verticalmargin_detail_textdescription"
        android:layout_marginHorizontal="@dimen/horizontalmargin_detail_textdescription"
        android:textColor="@color/violet_main"
        app:layout_constraintTop_toBottomOf="@id/view_movieinfo_linetitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline_center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textview_detail_label"
        app:layout_constraintTop_toBottomOf="@id/textview_detail_textoriginaltitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/textview_detail_textrating" />

    <TextView
        android:id="@+id/textview_detail_textrating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/verticalmargin_detail_textdescription"
        android:layout_marginHorizontal="@dimen/horizontalmargin_detail_textdescription"
        android:textColor="@color/violet_main"
        app:layout_constraintTop_toBottomOf="@id/textview_detail_textoriginaltitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline_center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textview_detail_label"
        app:layout_constraintTop_toBottomOf="@id/textview_detail_textrating"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/textview_detail_textdate" />

    <TextView
        android:id="@+id/textview_detail_textdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/verticalmargin_detail_textdescription"
        android:layout_marginHorizontal="@dimen/horizontalmargin_detail_textdescription"
        android:textColor="@color/violet_main"
        app:layout_constraintTop_toBottomOf="@id/textview_detail_textrating"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guideline_center" />

    <View
        android:id="@+id/view_movieinfo_lineroot"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_detail_textdate"
        android:background="@color/violet_light"
        android:layout_marginHorizontal="9dp" />

    <TextView
        android:id="@+id/textviewlabel_detail_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/textview_detail_label"
        app:layout_constraintTop_toBottomOf="@id/view_movieinfo_lineroot"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/textview_detail_textdescription" />

    <TextView
        android:id="@+id/textview_detail_textdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/verticalmargin_detail_textdescription"
        android:layout_marginHorizontal="@dimen/horizontalmargin_detail_textdescription"
        android:textColor="@color/violet_main"
        app:layout_constraintTop_toBottomOf="@id/textviewlabel_detail_description"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_detail_trailers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_detail_textdescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_detail_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerview_detail_trailers" />

</androidx.constraintlayout.widget.ConstraintLayout>